Implement first proto

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
   <title>MAGENTA-ELECTRON</title>
 </head>
 <body>
-  <button id='generate-button'>Generate</button>
+  <div id='console'></div>
+  <canvas id='visualizer' width=1080 ></canvas>
+  <button id='only-c-button'>Only C</button>
+  <button id='variation-button'>Variation</button>
+  <button id='play-button'>Play</button>
   <script src='renderer.js'></script>
 </body>
 </html>
